--- a/pb_hooks/pages/+layout.ejs
+++ b/pb_hooks/pages/+layout.ejs
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0/themes.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body class="flex flex-col min-h-screen">
     <header class="navbar bg-base-100 shadow-sm">
